# CarrierCapture.py

./: .gitignore  404.html  AGENT.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  tests.yml
TEST_RESULTS/: index.html
api/: index.html
api/analysis/: index.html
api/cli/: index.html
api/core/: index.html
api/io/: index.html
api/visualization/: index.html
benchmarks/: README.md  benchmark_sn_zn.py  run_benchmark.sh  run_julia_reference.jl
benchmarks/reference_data/: .gitkeep  sn_zn_julia_reference.json
docs/: TEST_RESULTS.md  index.md
docs/api/: analysis.md  cli.md  core.md  index.md  io.md  visualization.md
docs/examples/: gallery.md  notebooks.md
docs/getting-started/: basic-concepts.md  first-calculation.md  installation.md  quick-start.md
docs/user-guide/: capture-coefficients.md  cli-usage.md  configuration.md  doped-integration.md  parameter-scanning.md  potentials.md  visualization.md
examples/: README.md
examples/gallery/: index.html
examples/notebooks/: 01_harmonic_sn_zn.ipynb  02_anharmonic_dx_center.ipynb  03_parameter_scan.ipynb  04_interactive_viz.ipynb  index.html
getting-started/basic-concepts/: index.html
getting-started/first-calculation/: index.html
getting-started/installation/: index.html
getting-started/quick-start/: index.html
search/: search_index.json
src/carriercapture/: __init__.py  __version__.py  _constants.py
src/carriercapture/analysis/: __init__.py  parameter_scan.py
src/carriercapture/cli/: main.py
src/carriercapture/cli/commands/: __init__.py  capture.py  fit.py  scan.py  solve.py  viz.py
src/carriercapture/core/: __init__.py  config_coord.py  potential.py  schrodinger.py  transfer_coord.py
src/carriercapture/io/: __init__.py  doped_interface.py  readers.py  writers.py
src/carriercapture/visualization/: __init__.py  interactive.py  static.py  themes.py
tests/: test_advanced_fitting.py  test_config_coord.py  test_doped_integration.py  test_interactive_dashboard.py  test_parameter_scan.py  test_potential.py  test_schrodinger.py  test_transfer_coord.py  test_visualization.py
user-guide/capture-coefficients/: index.html
user-guide/cli-usage/: index.html
user-guide/configuration/: index.html
user-guide/doped-integration/: index.html
user-guide/parameter-scanning/: index.html
user-guide/potentials/: index.html
user-guide/visualization/: index.html
