[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "carriercapture"
version = "1.0.0"
description = "Carrier capture and non-radiative recombination rate calculations for semiconductors"
authors = [
    {name = "CarrierCapture Team"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "pandas>=1.3",
    "pyyaml>=5.4",
    "click>=8.0",
    "rich>=10.0",
    "plotly>=5.0",
    "dash>=2.0",
    "pymatgen>=2022.0",
    "joblib>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "pytest-xdist>=2.5",
    "mypy>=0.990",
    "black>=22.0",
    "ruff>=0.0.250",
    "pre-commit>=2.20",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
]
notebook = [
    "jupyter>=1.0",
    "ipywidgets>=8.0",
]
doped = [
    "doped>=2.0",
    "monty>=2024.0",
]

[project.scripts]
carriercapture = "carriercapture.cli.main:cli"

[project.urls]
Homepage = "https://github.com/WMD-group/CarrierCapture.py"
Repository = "https://github.com/WMD-group/CarrierCapture.py"
Documentation = "https://wmd-group.github.io/CarrierCapture.py/"

[tool.hatch.build.targets.wheel]
packages = ["src/carriercapture"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=carriercapture --cov-report=term-missing"

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
